# Graphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  main.cpp
doc/: Bezier_Curve.md  Color.md  Color_Model.md  Ear_Clipping.md  Geometric_Optics.md  Illumination_Model.md  Map_Projection.md  Rasterization.md  ReadMe.md  Transformation.md
docs/: Color_Model.md  Ear_Clipping.md  ReadMe.md
include/: Plot.h
include/color/: Color.h  HSV.h  Image.h  RGB.h  RGB_c.h  Spectrum.h
include/geometry/: ComputationalGeometry.h  ConvexHull.h  Delaunay.h  Ear_Clipping.h  Fractal.h  GeometricalOptics.h  Intersect.h  MarchingCubes.h  RegularPolygon.h  Tessellation.h  Tree3D.h
include/grating/: Graphics2D.h  Graphics3D.h  GraphicsIO.h  GraphicsND.h
include/image_processing/: BasicOperate.h  OtherOperate.h
include/modeling/: Modeling.h
include/other/: Graphics3D.h  Graphics3D__.h  Plot.h  Transform.h
include/ray_tracing/: Material.h  Object.h  Ray.h  RayTracing.h  Shape.h  ThreadPool.h
scripts/: files_synchronous.bat
src/: Intersect.cpp  Transform.cpp
src/grating/: Graphics2D.cpp  Graphics3D.cpp  GraphicsND.cpp
src/modeling/: Modeling.cpp
src/other/: Graphics3D.cpp  Graphics3D__.cpp
src/ray_tracing/: Object.cpp  RayTracing.cpp
test/: ColorTest.h  Graphics2DTest.h  RayTracingTest.h  main.cpp
test/NewFolder/: 3D-surface.cpp  Architecture.h  Boids.h  GraphicsNDTest.cpp  RayTracing-Room-4.cpp  RayTracingTest.h  RayTracingTest.txt  flower.cpp  五次方曲面之舞.cpp  山海人.cpp  山海树.cpp
test/extensions/: Architecture.h  Bridge.h  Building.h  Building2.h  Stair.h  mainwindow.cpp  mainwindow.h
